Correct display of double border on subfield fieldset
In some cases two modifiers could be added to a fieldset element
which would produce a double border.

Using the form-group modifier wouldn't produce the border at the
correct height so this ensures there is no second border coming from
the form group styles if both modifiers are applied.

--- a/assets/stylesheets/components/form/_form-fieldset.scss
+++ b/assets/stylesheets/components/form/_form-fieldset.scss
@@ -32,12 +32,13 @@
 
 // Modifiers
 fieldset.c-form-fieldset--subfield {
+  border-left: 0;
+  padding-left: $default-spacing-unit * 2;
   position: relative;
-  margin-left: $default-spacing-unit * 2;
 
   &::before {
     position: absolute;
-    left: 0;
+    left: $default-spacing-unit;
     top: 0;
     bottom: 0;
     border-left: 5px solid $grey-2;
